--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
@@ -18,6 +19,7 @@
     "openai": "^4.73.0",
     "replicate": "^1.0.1",
     "set-interval-async": "^3.0.3",
+    "string-similarity": "^4.0.4",
     "winston": "^3.15.0"
   }
 }
