--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
+    "cors": "^2.8.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "mongodb": "^6.10.0",
+    "express": "^4.21.1",
+    "mongodb": "^6.11.0",
     "ollama": "^0.5.9",
     "openai": "^4.73.0",
     "replicate": "^1.0.1",
