Location System and Attack System Shell.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fuse.js": "^7.0.0",
     "mongodb": "^6.11.0",
     "ollama": "^0.5.9",
     "openai": "^4.73.0",
