--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai": "^4.73.0",
     "replicate": "^1.0.1",
     "set-interval-async": "^3.0.3",
+    "sharp": "^0.33.5",
     "string-similarity": "^4.0.4",
     "winston": "^3.15.0"
   }
