--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cosyworld8",
   "version": "1.0.0",
   "main": "src/index.mjs",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
